first test/private-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
        name: goang-turism-deploy
        labels:
                app: go-turism-api
spec:
        replicas: 1
        selector:
                matchLabels:
                        app: go-turism-api
        template:
                metadata:
                        labels:
                                app: go-turism-api
                spec:
                        containers:
                                - name: golang-turism
                                  image: masrur121/turism-api:golang
                                  ports:
                                          - containerPort: 8089
                        imagePullSecrets:
                                - name: docker-secret
